# conllu-diff

./: .gitignore  README.md  TODO.md  environment.yml  prototype.py  requirements.txt
config_files/: ssj_sst_upos.json  ssj_sst_upos.py
conlludiff/: README.md  pyproject.toml  requirements.txt  test_expected_behaviour.py
conlludiff/src/conlludiff/: __init__.py  differ.py
conlludiff/src/docs/: conlludiff.rst  examples.rst  index.rst  intro.rst  modules.rst
conlludiff/src/docs/_build/markdown/: conlludiff.md  examples.md  index.md  intro.md  modules.md
conlludiff/src/docs/_build/markdown/docs/: modules.md
conlludiff/tests/: debug.py  test_expected_behaviour.py
conlludiff/tests/data/: new_deprel+head_deprel.csv  original_deprel+head_deprel.csv  original_deprel.csv  original_feat.csv  original_lemma.csv  original_upos.csv  ssj_sst_upos.json
