[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conlludiff"
version = "0.0.5"
description = "Analyze two CONLLU files"
readme = "README.md"
authors = [{ name = "Peter Rupnik", email = "rupnikpeter@gmail.com" }]
maintainers = [{ name = "Peter Rupnik"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["conlludiff", "conllu", "conll"]
dependencies = [
    "numpy",
    "scipy",
    "conllu"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "sphinx"]

[project.urls]
Homepage = "https://github.com/clarinsi/conllu-diff"
"Bug Reports" = "https://github.com/clarinsi/conllu-diff/issues"

[tool.bumpver]
current_version = "0.0.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"src/conlludiff/__init__.py" = [
    '^__version__ = "{version}"$'
]
